Fix header logo spacing

--- a/docs/_mkdocs/theme/ranvier/assets/stylesheets/application.css
+++ b/docs/_mkdocs/theme/ranvier/assets/stylesheets/application.css
@@ -51,7 +51,7 @@ input {
   .md-content__edit, .md-header-nav__button, .md-footer-nav__button, .md-nav__title::before, .md-nav__button {
     display: inline-block;
     margin: 0;
-    padding: 0.8rem;
+    padding: 0;
     font-size: 2.4rem;
     cursor: pointer; }
 
